--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,3 +1,11 @@
 body{
     background-color: bisque;
 }
+
+.complete{
+    background-color: chartreuse;
+}
+
+.incomplete{
+    background-color: red;
+}
